# brazil-congress-transparency-project

./: .gitignore  README.md  pyproject.toml
dashboard/: app.py  queries.py
dashboard/assets/: br_states.geojson
dashboard/pages/: 0_AdHoc.py  1_Perfil_do_Senador.py  2_Comissoes.py  2_Pessoal_e_Remuneracoes.py  3_Despesas.py  4_Pessoal_e_Remuneracoes.py  4_Votacoes.py  5_Despesas.py  5_Emendas_Parlamentares.py  6_Deputados.py  6_Votacoes.py  7_Emendas_Parlamentares.py  8_Financiamento_Eleitoral.py  9_Contratos_Federais.py
dashboard/tests/: test_queries.py
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/macros/: normalize_name.sql
dbt_project/models/marts/: dim_partido.sql  dim_senador.sql  fact_votacao.sql  schema.yml
dbt_project/models/staging/: sources.yml  stg_mandatos.sql  stg_senadores.sql  stg_votacoes.sql  (+1 more)
dbt_project/seeds/: partidos.csv
docs/: adding_a_new_extractor.md  all_data_sources_overview.md  api_strategic_map.md  comissoes_endpoints_comparison.md  expansion_strategy.md  raw_data_schemas.md
src/extraction/: api_client.py  brazil_utils.py  camara_client.py  config.py  download_utils.py  extract_auxilio_moradia.py  extract_camara_deputados.py  extract_camara_despesas.py  extract_camara_proposicoes.py  extract_camara_votacoes.py  extract_ceap_camara.py  extract_ceaps.py  extract_ceaps_senado.py  extract_comissoes.py  extract_emendas.py  extract_liderancas.py  extract_processos.py  extract_senators.py  extract_servidores.py  extract_transferegov.py  extract_transparencia.py  extract_tse.py  extract_votacoes.py  pipeline.py  utils.py
(+87 files in other folders)
