[project]
name = "brazil-senate-transparency-project"
version = "0.1.0"
description = "Civic-tech transparency portal for the Brazilian Federal Senate"
requires-python = ">=3.12"

dependencies = [
    "dbt-duckdb>=1.9",
    "polars>=1.0",
    "streamlit>=1.40",
    "httpx>=0.27",
    "duckdb>=1.1",
]

[dependency-groups]
dev = []
